# AI-Stock-Agent

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  INTEGRATION.md  PROJECT.md  PR_DESCRIPTION.md  README.md  STRUCTURE.md  docker-compose.yml
src/backend/: .dockerignore  alembic.ini  pyproject.toml
src/backend/app/: config.py  main.py  utils.py
src/backend/app/agents/: budget.py
src/backend/app/analysis/: fundamental_score.py  sentiment_analysis.py
src/backend/app/api/: __init__.py  deps.py  schemas.py
src/backend/app/db/: __init__.py  base.py  bootstrap.py  enums.py  payloads.py  session.py
src/backend/app/providers/: __init__.py  alpha_vantage_news.py  embeddings.py  gdelt.py  llm.py  market.py  news.py  sec.py  web.py  web_news.py
src/backend/app/scheduler/: __init__.py  runner.py  schedule.py
src/backend/app/tools/: __init__.py  analysis.py  delivery.py  invoke.py  registry.py  research.py  state.py  tool_schema.py  web.py
src/backend/app/workflows/: __init__.py  company_rescore.py  concurrency.py  daily_digest.py  deep_research.py  digest_types.py  market_pulse.py  news_ingest.py  on_demand.py  prose_regeneration.py  registry.py  runtime.py  sector_research.py  significance_recheck.py  triggers.py
src/backend/scripts/: __init__.py  backfill_domain.py  export_openapi.py  seed.py
src/backend/tests/: conftest.py  test_api_smoke.py  test_utils.py
src/backend/tests/agents/: test_agent_loop.py  test_llm_provider.py  test_progress_heartbeat.py  test_steer_injection.py  test_system_prompt.py
src/backend/tests/api/: fakes.py  (+6 more)
(+284 files in other folders)
